모든 자료 업데이트

--- a/Week3/Week3_수업자료.ipynb
+++ b/Week3/Week3_수업자료.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -102,7 +103,7 @@
         "id": "lpF2SbjxrY3Q",
         "outputId": "7e1092e3-5c56-41a9-b471-f551946ae7a1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,9 +125,9 @@
         "y = True\n",
         "z = [1, 2, 3]\n",
         "\n",
-        "print() # x의 타입 출력\n",
-        "print() # y의 타입 출력\n",
-        "print() # z의 타입 출력"
+        "print(_____) # x의 타입 출력\n",
+        "print(_____) # y의 타입 출력\n",
+        "print(_____) # z의 타입 출력"
       ],
       "metadata": {
         "id": "TrwUuB-5uKbm"
@@ -247,7 +248,7 @@
         "id": "AKnWQjdiqfvn",
         "outputId": "42e3103e-d9a9-4d8b-c52a-f5eff509ff88"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +280,7 @@
         "id": "krRx42LrrUGy",
         "outputId": "e3518ec3-e8f2-41f3-f367-46368f42db8e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +350,7 @@
         "id": "LWalkY3DwEQd",
         "outputId": "187641f5-191e-4751-d417-7a9cdd7703a4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,11 +380,13 @@
       "cell_type": "code",
       "source": [
         "#@title 예제 2-1. 변수 x를 정수로 변환하고 타입을 출력해봅시다.\n",
+        "##\n",
         "\n",
-        "x = 1.999999999999\n",
+        "x = 1.9999\n",
         "\n",
-        "print() # 정수 변환\n",
-        "print() # 타입 출력"
+        "result = ____(x)    # 힌트 : 정수로 변환하는 함수를 활용해봅시다.\n",
+        "\n",
+        "print(____(result)) # 힌트 : result의 타입을 출력하는 함수를 활용해봅시다."
       ],
       "metadata": {
         "id": "HoURMdUZydc0"
@@ -398,14 +401,28 @@
         "\n",
         "x = 1234\n",
         "\n",
-        "print() # 정수 변환\n",
-        "print() # 타입 출력"
+        "result = ____(x)    # 힌트 : 실수로 변환하는 함수를 활용해봅시다.\n",
+        "\n",
+        "print(____(result)) # 힌트 : result의 타입을 출력하는 함수를 활용해봅시다."
       ],
       "metadata": {
-        "id": "Kcm56BQK_teq"
+        "id": "Kcm56BQK_teq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c74e1ab6-0056-477e-fcc8-c8def402be2d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1234.0\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -434,7 +451,7 @@
         "y = 25\n",
         "z = 5\n",
         "\n",
-        "result = # 정답 입력\n",
+        "result = ___ + ___ + ___ # 정답 입력\n",
         "\n",
         "print(result)"
       ],
@@ -484,7 +501,7 @@
         "id": "LJO9toOuIhQs",
         "outputId": "ab5711b3-7eeb-456a-c62f-f0e9a5e1d502"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +540,7 @@
         "id": "PE4tPNfFIJFW",
         "outputId": "bf8c0ec9-e5de-4967-a52b-d912708c2960"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +593,7 @@
         "id": "wQF5BsVbITZm",
         "outputId": "e797c34c-1ad4-40a6-f9bf-541309b65741"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -606,7 +623,7 @@
         "id": "wkwjZC2AIZ6n",
         "outputId": "e3058d30-7ce2-4c67-d021-61b6c9ebe4d6"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,28 +641,125 @@
         "#@title 4. 다양한 메서드 제공\n",
         "text = \"python programming\"\n",
         "print(text.upper())    # 대문자로 변환 : \"PYTHON PROGRAMMING\"\n",
-        "print(text.replace(\"python\", \"java\"))  # 다른 문자열로 대체 : \"java programming\"\n",
-        "print(text.split())    # 두 문자열로 ㅁㅇ[\"python\", \"programming\"]"
+        "print(text.replace(\"python\", \"java\"))  # 다른 문자열로 대체 : \"java programming\"\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S4VvXWnUJwet",
-        "outputId": "90a1bad0-9f06-4738-9f38-253a798b2518"
+        "outputId": "97d4fc44-6de3-41f5-aa06-b980ca8845a0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "PYTHON PROGRAMMING\n",
-            "java programming\n",
-            "['python', 'programming']\n"
+            "java programming\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### ❓ 함수(Function)와 메서드(Method)의 적용 방식 차이\n",
+        "\n",
+        "> 파이썬에서 어떤 작업을 수행할 때 괄호() 안에 대상을 넣는 방식과, 점(.)을 찍고 메서드를 호출하는 방식이 있습니다.\n",
+        "이 둘은 모양만 다른 것이 아니라, 적용 대상이 무엇인지와 어디에 속해 있는 기능인지가 다릅니다.\n",
+        "\n",
+        "##### 1. 함수(Function) — **독립적으로 존재**\n",
+        "- str(), int(), float() 처럼 파이썬에 기본으로 **내장된 함수는 독립적으로 존재**합니다.\n",
+        "- 괄호 안에 대상을 **전달(인자, argument)** 하면, 그 값을 변환하거나 새로운 값을 만들어 반환합니다.\n",
+        "\n",
+        "\n",
+        "\n",
+        "```python\n",
+        "num = 123\n",
+        "print(str(num))   # 정수 → 문자열 '123'\n",
+        "\n",
+        "pi = \"3.14\"\n",
+        "print(float(pi))  # 문자열 → 실수 3.14\n",
+        "```\n",
+        "\n",
+        "##### 2. 메서드(Method) — **객체(Object)에 소속된 함수**\n",
+        "- str.upper(), str.lower(), list.append() 처럼 특정 자료형(객체)에 속해 있는 함수를 메서드라고 합니다.\n",
+        "- 대상.메서드() 형태로 호출해야 하며, 그 자료형에서만 쓸 수 있는 기능입니다.\n",
+        "\n",
+        "```python\n",
+        "text = \"python\"\n",
+        "print(text.upper())    # 'PYTHON'\n",
+        "print(text.replace(\"py\", \"ja\"))  # 'jathon'\n",
+        "```\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WPIEKT1CYd2D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### ❓ 괄호 안에 들어가는 Argument(인자)란?\n",
+        "> 파이썬에서 함수를 사용할 때 일반적으로 함수이름(무언가) 형태로 쓰입니다.\n",
+        "이때 괄호 () 안에 들어가는 값이나 변수를 **argument(아규먼트, 인자)**라고 합니다.\n",
+        "쉽게 말하면, 함수가 일을 하기 위해 재료로 받는 값입니다.\n",
+        "\n",
+        "다음은 파이썬 공식 문서 기준으로, 문자열 메서드 replace() 의 시그니처(signature)는 다음과 같습니다.\n",
+        "\n",
+        "```python\n",
+        "str.replace(old, new[, count])\n",
+        "```\n",
+        "-\told → 바꿀 대상 문자열 (필수)\n",
+        "-\tnew → 바꾼 후의 문자열 (필수)\n",
+        "-\tcount → 바꿀 횟수 (선택, 기본값은 전체)\n",
+        "\n",
+        "예시로 argument 이름을 직접 지정해서도 호출할 수 있습니다.\n",
+        "\n",
+        "```python\n",
+        "text = \"banana banana banana\"\n",
+        "\n",
+        "print(text.replace(old=\"banana\", new=\"apple\"))\n",
+        "# 결과: \"apple apple apple\"\n",
+        "\n",
+        "print(text.replace(old=\"banana\", new=\"apple\", count=2))\n",
+        "# 결과: \"apple apple banana\"\n",
+        "````\n",
+        "\n",
+        "인자 순서대로 작성하면, 따로 각 인자별로 지정하지 않아도 호출할 때도 있습니다.\n",
+        "\n",
+        "```python\n",
+        "text = \"banana banana banana\"\n",
+        "\n",
+        "print(text.replace(\"banana\",\"apple\"))\n",
+        "# 결과: \"apple apple apple\"\n",
+        "\n",
+        "print(text.replace(\"banana\",\"apple\",2))\n",
+        "# 결과: \"apple apple banana\"\n",
+        "````\n",
+        "\n",
+        "##### 💡 argument 지정을 생략할 수 있는 경우\n",
+        "\n",
+        "replace 메서드를 기준으로 봅시다.\n",
+        "\n",
+        "1. 필수 인자 (old, new)\n",
+        "-\t무엇을 바꿀지(old)와 무엇으로 바꿀지(new)는 없으면 메서드 자체가 의미가 없습니다.\n",
+        "-\t따라서 항상 꼭 넣어야 합니다.\n",
+        "\n",
+        "2. 선택적 인자 (count)\n",
+        "-\t대부분은 전체 다 바꾸는 게 자연스러워요.\n",
+        "-\t하지만 “앞에서 몇 번만 바꾸고 싶다”는 경우가 있을 수 있죠. 이때만 count를 사용하면 됩니다.\n",
+        "- 그래서 **없으면 기본값으로 “전체”**를 바꾸도록 설계되어 있습니다.\n",
+        "\n",
+        "> 즉, **파이썬 함수/메서드에서 기본값(default value) 이 설정된 인자**는 생략해도 자동으로 그 기본값이 사용됩니다.\n",
+        "이런 인자를 **옵션 인자(optional argument)** 라고 불러요."
+      ],
+      "metadata": {
+        "id": "R7zF9aN1aWOi"
+      }
     },
     {
       "cell_type": "code",
@@ -781,8 +895,9 @@
         "\n",
         "x = \"123\"\n",
         "\n",
-        "print()   # 문자열 x를 정수로 변환\n",
-        "print()   # 타입 출력"
+        "result = ____(x)\n",
+        "\n",
+        "print(____(result))   # 타입 출력"
       ],
       "metadata": {
         "id": "Pd4cz3-NImuV"
@@ -794,11 +909,18 @@
       "cell_type": "code",
       "source": [
         "#@title 예제 3-2. 문자열에서 원하는 글자를 꺼내어 출력해봅시다.\n",
+        "## first_word엔 s에서 첫 번째 글자를 출력\n",
+        "## slicing_words엔 s에서 \"Pyt\"를 슬라이싱으로 출력\n",
         "\n",
         "s = \"Python\"\n",
         "\n",
-        "print()   # s에서 첫 번째 글자를 출력\n",
-        "print()   # s에서 \"Pyt\"를 슬라이싱으로 출력"
+        "# 힌트 : 인덱싱과 슬라이싱을 어떻게 했는지 생각해봅시다.\n",
+        "\n",
+        "first_word = s___\n",
+        "slicing_words = s___\n",
+        "\n",
+        "print(first_word)\n",
+        "print(slicing_words)"
       ],
       "metadata": {
         "id": "JovnZqPUIn2M"
@@ -810,18 +932,57 @@
       "cell_type": "code",
       "source": [
         "#@title 예제 3-3. 문자열 연산을 활용해서 새로운 문자열을 출력해봅시다.\n",
+        "## words에는 word1과 word2를 연결해서 출력\n",
+        "## word1_3에는 word1을 3번 반복해서 출력\n",
         "\n",
-        "word1 = \"Hi\"\n",
+        "word1 = \"Hello \"\n",
         "word2 = \"Python\"\n",
         "\n",
-        "print()   # word1과 word2를 연결해서 출력\n",
-        "print()   # word1을 3번 반복해서 출력"
+        "# 힌트 : 문자열도 연산이 가능합니다.\n",
+        "\n",
+        "words = ____\n",
+        "word1_3 = _____\n",
+        "\n",
+        "print(words)\n",
+        "print(word1_3)"
       ],
       "metadata": {
         "id": "-mt0Yq4sInz-"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 예제 3-4. 문자열에 적용할 수 있는 메서드를 활용해봅시다.\n",
+        "\n",
+        "name = \"kang\"\n",
+        "\n",
+        "upper = name._____() # 대문자로 변환\n",
+        "replace = name._____(___,___) # 'k'를 'K'로 변환\n",
+        "\n",
+        "print(upper)\n",
+        "print(replace)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zndVf4NvXhDO",
+        "outputId": "51a5075f-1f6e-41fa-f097-11d176fa8503"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
