modified files updates

--- a/Week4/Week4_수업자료.ipynb
+++ b/Week4/Week4_수업자료.ipynb
@@ -594,12 +594,18 @@
         "print(type(b))      # <class 'set'>\n",
         "```\n",
         "\n",
-        "3. 집합은 **중복을 허용하지 않습니다.**\n",
+        "3. 집합은 **중복을 허용하지 않습니다.** </br>\n",
         "중복 원소를 넣으면 자동으로 하나만 저장됩니다.\n",
         "\n",
         "```python\n",
         "nums = {1, 2, 2, 3, 3, 3}\n",
         "print(nums)   # {1, 2, 3}\n",
+        "```\n",
+        "\n",
+        "4. 이런 세트의 특성을 이용해서 **리스트의 중복을 제거**할 수 있습니다.\n",
+        "```python\n",
+        "nums = [1, 2, 2, 3, 3, 3]\n",
+        "print(list(set(nums)))   # [1, 2, 3]\n",
         "```"
       ],
       "metadata": {
@@ -865,6 +871,7 @@
         "print(person)              # {'name': 'Alice', 'age': 30, 'job': 'Engineer'}\n",
         "\n",
         "# 안전하게 키 접근 (get) → 없는 키를 조회해도 오류 발생하지 않음\n",
+        "## dict.get(\"키 이름\", \"없을 경우 출력할 값\")\n",
         "print(person.get(\"city\"))        # None\n",
         "print(person.get(\"city\", \"N/A\")) # \"N/A\"\n",
         "\n",
