--- a/Week4/Week4_예제_및_과제_정답.ipynb
+++ b/Week4/Week4_예제_및_과제_정답.ipynb
@@ -312,7 +312,7 @@
         },
         "outputId": "78606122-de52-4198-fc51-237d4ff5a5e7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +342,7 @@
         "id": "RU8uTih4K7vd",
         "outputId": "8c20f5d4-4737-4b48-cf5b-ae0f2a54a922"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
         "id": "ruxd6INFLApi",
         "outputId": "5bdca0ec-dfc5-4292-ad27-394ef1eaff2a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,11 +384,126 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 과제 정답"
+      ],
+      "metadata": {
+        "id": "q_mU6p-royxv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#"
       ],
       "metadata": {
         "id": "bTLA2dkCJ3YU"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "46154311"
+      },
+      "outputs": [],
+      "source": [
+        "!wget -q -O Week4_Q.py https://raw.githubusercontent.com/sbinhigher/tourism_data_lecture/main/Week4/Week4_Q.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "909d2057"
+      },
+      "outputs": [],
+      "source": [
+        "import Week4_Q as quiz"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "quiz.show_all_explanations()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "53A_kjwvo2We",
+        "outputId": "ea01152f-10c8-469b-9d67-ba1446e89a83"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "### Q1\n",
+            "정답: list(set(nums))\n",
+            "Q1 해설: list(set(nums)) 로 중복 제거 후 리스트 변환\n",
+            "\n",
+            "### Q2\n",
+            "정답: 1. [8, 9]\n",
+            "Q2 해설: 3차원 인덱싱/슬라이싱\n",
+            "- tensor[1]           → [[7, 8, 9], [10, 11, 12]]  (두 번째 '층')\n",
+            "- tensor[1][0]        → [7, 8, 9]                   (그 층의 첫 번째 '행')\n",
+            "- tensor[1][0][1:]    → [8, 9]                      (그 행의 인덱스 1부터 끝까지)\n",
+            "\n",
+            "### Q3\n",
+            "정답: t[1] = 5\n",
+            "Q3 해설: 튜플은 불변이라 t[1]=5는 오류\n",
+            "\n",
+            "### Q4\n",
+            "정답: 2. [2,4,6,8,10]\n",
+            "Q4 해설:\n",
+            "range(2, 11, 2)는 2부터 시작해 11 직전까지 2씩 증가하는 수열을 만듭니다.\n",
+            "→ 2, 4, 6, 8, 10\n",
+            "따라서 list(r)의 결과는 [2, 4, 6, 8, 10] 입니다.\n",
+            "\n",
+            "### Q5\n",
+            "정답: fruits.add('orange')\n",
+            "Q5 해설: fruits.add('orange') 로 원소 추가\n",
+            "\n",
+            "### Q6\n",
+            "정답: {'b', 'c'}\n",
+            "Q6 해설: & 는 교집합, 결과는 {'b','c'}\n",
+            "\n",
+            "### Q7\n",
+            "정답: 4, 4) info.index() → [0,1,2]\n",
+            "Q7 해설:\n",
+            "1) info.keys() ✅ 올바름 → 키들의 목록 ['이름','나이','학과']\n",
+            "2) info.values() ✅ 올바름 → 값들의 목록 ['홍길동', 30, '데이터사이언스']\n",
+            "3) info.items() ✅ 올바름 → (키, 값) 쌍들의 목록 [('이름','홍길동'), ('나이',30), ('학과','데이터사이언스')]\n",
+            "4) info.index() ❌ 틀림 → 딕셔너리에는 index() 메서드가 없습니다. 인덱스는 리스트·튜플 등 순서형 자료에서만 사용됩니다.\n",
+            "❌ 인덱스(index)는 리스트나 튜플처럼 순서형 자료에서 사용하는 개념이지, 딕셔너리의 구성 요소가 아닙니다.\n",
+            "\n",
+            "### Q8\n",
+            "정답: student['email'] = 'lee@example.com'\n",
+            "Q8 해설: student['email']='...' 으로 추가\n",
+            "\n",
+            "### Q9\n",
+            "정답: 'N/A'\n",
+            "Q9 해설: get(key,default) → 없으면 'N/A'\n",
+            "\n",
+            "### Q10\n",
+            "정답: 2 (tuple은 수정 불가)\n",
+            "Q10 해설: tuple은 수정 불가, 나머지는 맞음\n",
+            "\n",
+            "✅ 모든 해설 출력 완료\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wz2hPOrxo5Mx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
